# rust-sync

./: Cargo.toml  readme.md
src/: main.rs
src/database/: connection.rs  mod.rs  mysql.rs  schema.rs  sql_server.rs
src/models/: mod.rs
src/sync/: engine.rs  mod.rs  mysql_to_sql.rs  sql_to_mysql.rs
src/ui/: mod.rs
