[package]
name = "rustsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
mysql_async = "0.35"
tiberius = { version = "0.12", features = ["sql-browser-tokio"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
chrono = "0.4"
indicatif = "0.17.7"
colored = "2.1.0"